--- a/app/globals.css
+++ b/app/globals.css
@@ -28,3 +28,34 @@ body {
 .kid-font {
   font-family: "Coming Soon", cursive;
 }
+
+.other-font {
+  font-family: "Fredoka", sans-serif;
+}
+
+@layer utilities {
+  .animate-bounce {
+    animation: bounce 0.6s infinite ease-in-out;
+  }
+
+  .delay-\[150ms\] {
+    animation-delay: 150ms;
+  }
+
+  .delay-\[300ms\] {
+    animation-delay: 300ms;
+  }
+}
+
+p.jon {
+  display: flex;
+  justify-content: center;
+  margin-top: 45px
+}
+
+.kofi img {
+  height: 35px;
+  margin: 15px auto 0;
+  bottom: 30px;
+  display: flex;
+}
