--- a/app/globals.css
+++ b/app/globals.css
@@ -51,5 +51,25 @@ p.jon {
 
 .logo {
   width: 50px;
+  height: 50px;
   display: inline-block;
 }
+
+h1 {
+  font-weight: 500;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-size: 1.2rem;
+}
+
+h2, h3, h4 {
+  font-weight: 500;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-size: 1rem;
+}
+
+a:hover, button:hover {
+  cursor: pointer;
+}
+
